# rules_kotlin

examples/android/: .bazelrc  BUILD.bazel  WORKSPACE  maven_install.json
examples/android/app/: BUILD.bazel
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/kotlin/: Test.kt
examples/android/lib/: BUILD.bazel
examples/android/lib/src/main/kotlin/examples/android/lib/: Utils2.java
examples/android/utils/: BUILD.bazel
examples/android/utils/src/main/: AndroidManifest.xml
examples/android/utils/src/main/java/com/tokopedia/utils/: AndroidManifest.xml  AppDatabase.kt  BUILD  User.kt  UserDao.kt  ckckcck.java
examples/android/utils/src/main/java/com/tokopedia/utils/contentdescription/: TextAndContentDescriptionUtil.kt
examples/android/utils/src/main/java/com/tokopedia/utils/currency/: CurrencyFormatUtil.kt
examples/android/utils/src/main/java/com/tokopedia/utils/htmltags/: BulletedList.kt  HtmlUtil.kt  IListTags.kt  ListTagHandler.kt  ListTagHelper.kt  Markers.kt  NumberedList.kt  SpanLeadingListItem.kt
examples/android/utils/src/main/java/com/tokopedia/utils/image/: ImageUtil.kt
examples/android/utils/src/main/java/com/tokopedia/utils/permission/: Ext.kt  PermissionCheckerHelper.kt
examples/android/utils/src/main/java/com/tokopedia/utils/phonenumber/: PhoneNumberUtil.kt
examples/android/utils/src/main/java/com/tokopedia/utils/res/drawable/: background_deadline.xml
examples/android/utils/src/main/java/com/tokopedia/utils/res/layout/: custom_vertical_text_view_layout.xml
examples/android/utils/src/main/java/com/tokopedia/utils/time/: RfcDateTimeParser.java  TimeHelper.kt
examples/android/utils/src/main/java/com/tokopedia/utils/view/: DarkModeUtil.kt  DoubleTextView.java
examples/android/utils/src/main/res/layout/: custom_horizontal_text_view_layout.xml
examples/android/utils/src/main/res/values/: dimens.xml  permission_str.xml
